# fdai

./: .dockerignore  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README-ko.md  README.md  azure.yaml  index.html  pyproject.toml
.githooks/: pre-commit  pre-push
.github/: CODEOWNERS  copilot-instructions.md
.github/ISSUE_TEMPLATE/: config.yml  work-item.yml
.github/instructions/: agent-pantheon.instructions.md  agent-stewardship.instructions.md  app-shape.instructions.md  architecture.instructions.md  coding-conventions.instructions.md  documentation-style.instructions.md  generic-scope.instructions.md  language.instructions.md
.github/workflows/: automatic-version.yml  check-derived-sources.yml  check-translations.yml  ci.yml  container-supply-chain.yml  deploy-dev.yml  infra-drift.yml  infra-lint.yml  issue-lifecycle.yml  pages.yml  release-deployment-bundle.yml
alembic/: env.py
alembic/versions/: 20260705_0004_state_kv.py  20260706_0005_t1_pattern_library.py  20260706_0006_operator_memory.py  20260708_0007_action_idempotency.py  20260708_0008_action_outbox.py  20260713_0011_ontology_instances.py  20260713_0012_process_runtime.py  20260713_0013_review_ontology.py  20260713_0014_process_projection_outbox.py  20260714_0015_inventory_snapshots.py  20260718_0035_inventory_realtime_overlay.py  20260718_0036_llm_invocation_scope.py  20260720_0037_post_turn_review.py  20260720_0038_conversation_search.py  20260720_0039_task_worker.py  20260720_0040_background_task.py  20260720_0041_busy_input.py  20260720_0042_skill_bundle_artifacts.py  20260720_0043_automation_blueprint.py  20260720_0044_scheduled_continuation.py  20260720_0045_skill_source_quarantine.py  20260720_0046_programmatic_pipeline.py  20260720_0047_conversation_delivery.py  20260720_0048_trajectory_dataset.py  20260721_0049_execution_backend.py  20260721_0050_browser_evidence.py  20260722_0051_background_task_completion.py  20260722_0052_read_investigation_runs.py
cli/: README.md  package-lock.json  package.json  tsconfig.json
cli/src/: cli.tsx  cockpit-format.ts  cockpit-input.ts  cockpit-renderer.ts  cockpit-sse.ts  cockpit-state.ts  cockpit-view.ts  cockpit.ts
cli/test/: cockpit-runtime.test.ts  cockpit.test.ts  i18n.test.ts  renderers.test.ts  view-model.test.ts
config/: architecture-review.yaml  notifications-matrix.yaml  rbac-groups.yaml
console/: .gitignore  README.md  agent-activity-incident-hardening-review.md  agents-submenu-hardening-review.md  governance-evidence-hardening-review.md  index.html  operations-menu-review.md  package-lock.json  package.json  playwright.config.ts  playwright.live.config.ts  settings-models-hardening-review.md  tsconfig.json  vite.config.ts  workflow-builder-hardening-review.md  workflow-ui-component-coverage.md
console/public/: notification-sw.js
console/scripts/: check-entry-bundle.mjs
console/src/: access-routing.test.ts  access-routing.ts  api-contract.ts  api-data-sources.test.ts  api-data-sources.ts  api-iam-client.ts  api-insights-client.ts  api-insights.ts  api-operations-client.ts  api-operations.ts  api-reporting-client.ts  api-source-gating.test.ts  api-transport.test.ts  api-transport.ts  api.test.ts  api.ts  app.tsx  auth-response.test.ts  auth-response.ts  auth.test.ts  auth.ts  browser-notifications.test.ts  browser-notifications.ts  config.test.ts  config.ts  ingestion-api.test.ts  ingestion-api.ts  main.tsx  navigation-preferences.test.ts  navigation-preferences.ts  notification-service-worker.test.ts  panel-sources.test.ts  panel-sources.ts  panels.test.ts  panels.tsx  preferences.test.ts  preferences.ts  router.test.ts  router.ts  styles.css  (+5 more)
delivery/: __init__.py
delivery/dev_operations_gateway/: .funcignore  README.md  __init__.py  function_app.py  gateway.py  idempotency.py  requirements.txt
docs/baselines/: v2026.07-ko.md  v2026.07.md
docs/diagrams/: fdai-agent-driven-runtime.diagram.yaml  fdai-system-overview.diagram.yaml
docs/roadmap/: README-ko.md  README.md  action-ontology-ko.md  action-ontology.md  agent-pantheon-implementation-ko.md  agent-pantheon-ko.md  agent-pantheon.md  agent-workflows-ko.md  agent-workflows.md  assurance-twin-ko.md  assurance-twin.md  channels-and-notifications-ko.md  channels-and-notifications.md  cost-model-ko.md  cost-model.md  csp-neutrality-ko.md  csp-neutrality.md  deploy-and-onboard-ko.md  deploy-and-onboard.md  deployment-ko.md  deployment-preflight-ko.md  deployment-preflight.md  deployment.md  dev-and-deploy-parity-ko.md  downstream-fork-example-vertical-ko.md  (+54 more)
infra/: .checkov.baseline  .terraform.lock.hcl  .tflint.hcl  README.md  main.tf  outputs.tf  production-gates.tf  variables.tf  versions.tf
policies/: README.md
rule-catalog/: README.md  RULE_AUTHORING_GUIDE.md  llm-registry.yaml  risk-classification.yaml
scripts/: .check-file-loc.allowlist  README.md  __init__.py  apply-tone-corrections.py  check-agents-imports.sh  check-arb-readiness.py  check-chaos-scenarios.sh  check-derived-sources.py  check-doc-links.sh  check-english-only.sh  check-file-loc.sh  check-governance-transitions.py  check-guids.sh  check-subsystem-fanout.sh  check-translations.sh  generate-scenarios.py  genesis-up.sh  infra-down.sh  ingest-chaos-mesh-catalog.py  ingest-kubernetes-docs-catalog.py  ingest-litmus-catalog.py  measure-detection-latency.py  normalize-punctuation.py  refresh-derived-sha.py  refresh-translation-sha.py  resume.sh  run-catalog-scenario.py  validate-catalog-full.py  verify-productization.sh  verify.sh
site/: .gitignore  README.md  astro.config.mjs  package-lock.json  package.json
tests/: README.md  conftest.py  test_action_promotion_e2e.py  test_check_protected_paths.py  test_check_structural_gates.py  test_composition_browser_evidence.py  test_composition_llm.py  test_composition_package_split.py  test_dev_deploy_parity.py  test_main_helpers.py  test_pricing_loader.py  test_structural_gates_drift.py
tools/: chat.py  chat_grounding_eval.py  console.py  publish_smoke_event.py  seed_p1_rules.py
ui/: README.md
(+11442 files in other folders)
