# FDAI - autonomous cloud operations control plane
#
# Python is the core runtime language for the control plane
# (see docs/roadmap/architecture/tech-stack.md - OD-1 resolved).
# All executable code lives under src/fdai/ (Python "src layout").
# Non-Python trees (rule-catalog/ YAML data, policies/ Rego, infra/ Terraform)
# live at the repo root - they are data or IaC, not Python packages.
#
# Skeleton scope (Phase 0 W1.1): manifest + package layout only.
# Runtime dependencies land in W1.2-W1.4 (contracts, config loader, OpenTelemetry wiring);
# CI tooling (ruff / mypy / pytest / coverage gates) lands in W1.7.

[project]
name = "fdai"
version = "0.1.26"
description = "Autonomous cloud operations control plane"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
authors = [{ name = "FDAI maintainers" }]
keywords = ["aiops", "control-plane", "gitops", "opa", "shadow-mode"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: Other/Proprietary License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    # W1.2 - contracts: typed models + JSON Schema validation at boundaries only.
    # Everything else (event bus, state store, telemetry, LLM clients) is deferred
    # to its own P0 work item so a violation is easy to spot in the lockfile diff.
    "pydantic>=2.9,<3",
    "jsonschema>=4.23,<5",
    # W1.4 - OpenTelemetry API + SDK. Day-zero uses local exporters; optional
    # OTLP/gRPC export is enabled only when a collector endpoint is configured.
    "opentelemetry-api>=1.29,<2",
    "opentelemetry-sdk>=1.29,<2",
    # W1.5 / W1.6 - schema migrations against PostgreSQL (pgvector). Alembic
    # pins SQLAlchemy transitively; psycopg[binary] carries both sync and
    # async drivers so the future StateStore adapter reuses the same client.
    "sqlalchemy>=2.0,<3",
    "alembic>=1.13,<2",
    "psycopg[binary]>=3.2,<4",
    # W2.1 - YAML parsing for catalog-as-code (action-types, vocabulary,
    # exemptions). Catalog files are authored as YAML per
    # docs/roadmap/rules-and-detection/rule-catalog-collection.md; JSON Schema stays the
    # validator, PyYAML only reads the file. Version pinned wide so a
    # lockfile bump doesn't churn other packages.
    "pyyaml>=6.0,<7",
    # W3 - HTTP client for provider adapters (Azure Resource Graph REST).
    # Async by default; `core/` never imports it - only adapters under
    # `delivery/<csp>/` do. Pinned per docs/roadmap/architecture/csp-neutrality.md § 5.
    "httpx>=0.27,<1",
    # W3.5 - Kafka client for the event-bus adapter. Realizes the wire-level
    # contract in docs/roadmap/architecture/csp-neutrality.md § 1; the same client talks
    # to Event Hubs Kafka on :9093 (SASL_SSL / OAUTHBEARER) or a self-hosted
    # broker. Only `delivery/<csp>/event_bus.py` imports it - `core/` stays
    # portable behind the `EventBus` Protocol.
    "aiokafka>=0.12,<0.13",
    # Read-only console API - Starlette is the ASGI micro-framework used by
    # `delivery/read_api/`. Chosen over FastAPI because the surface is three
    # GET routes (no OpenAPI generation, no request-body validation via
    # pydantic-integration) and Starlette carries fewer transitive deps
    # (see app-shape.instructions.md § Operator console). `core/` never
    # imports it - the framework touches only the delivery layer.
    #
    # Floor 1.3.1: closes 6 CVEs on 0.52.x, notably CVE-2026-48818
    # (StaticFiles UNC-path SSRF on Windows), CVE-2026-48817
    # (HTTPEndpoint non-standard-method attribute dispatch),
    # PYSEC-2026-161 / 248 (request.url Host / path reconstruction),
    # PYSEC-2026-249 (FormParser urlencoded limits ignored). Upper bound
    # <2 tracks the next stable major.
    "starlette>=1.3.1,<2",
    # Console read-API Entra JWT verification (delivery/read_api/entra_verifier.py).
    # PyJWT's PyJWKClient fetches + caches the tenant JWKS and `jwt.decode`
    # validates signature + `aud` + `iss` + `exp`/`nbf` in one call. The
    # `[crypto]` extra pulls `cryptography` for RS256. Generic + CSP-neutral:
    # the tenant id / audience / issuer are supplied via env, never baked in
    # (see docs/roadmap/interfaces/user-rbac-and-identity.md § 10.2). `core/` never imports
    # it - only the delivery layer validates human tokens.
    "pyjwt[crypto]>=2.10,<3",
    "croniter>=6,<7",
    "azure-storage-file-datalake>=12.25,<13",
    "aiohttp>=3.13,<4",
    "opentelemetry-exporter-otlp-proto-grpc>=1.29,<2",
]

[project.optional-dependencies]
# Development tooling. Concrete runtime deps still arrive with their own P0 tasks.
dev = [
    # pytest floor is 9.0.3: pytest <= 9.0.2 uses a predictable
    # /tmp/pytest-of-{user} temp dir (CVE-2025-71176, local DoS/priv-esc).
    "pytest>=9.0.3,<10",
    "pytest-cov>=5.0,<7",
    "pytest-asyncio>=1.0,<2",
    "pytest-xdist>=3.8,<4",
    "mypy>=1.13,<2",
    "ruff>=0.7,<1",
    # jsonschema ships no inline type hints; the stub package covers mypy --strict.
    "types-jsonschema>=4.23,<5",
    # PyYAML ships no inline type hints; the stub package keeps the loader
    # in `rule_catalog/schema/action_type.py` under mypy --strict.
    "types-PyYAML>=6.0,<7",
    # Runs the .pre-commit-config.yaml gates locally so a contributor
    # catches the same failures CI would surface. See
    # .github/instructions/generic-scope.instructions.md § Enforcement.
    "pre-commit>=4.0,<5",
    # Local dev-only ASGI server so the console SPA can hit the read-API
    # (`fdai.delivery.read_api.dev.local:app`) at development time. Not
    # required in production - a fork picks its own ASGI server per
    # container-runtime policy.
    "uvicorn>=0.32,<1",
]

# Production ASGI server for the read-only console API
# (`fdai.delivery.read_api.prod:app`). Kept as an opt-in extra so the
# headless core image stays minimal; the console-serving image installs
# it with `uv sync --extra serve`. A fork MAY swap this for another ASGI
# server per its container-runtime policy.
serve = [
    "uvicorn>=0.32,<1",
]
pdf-report = [
    "weasyprint>=66,<70",
]
# Isolated browser-evidence workers install this extra explicitly. The core and
# read-API images omit it so browser code and binaries never inherit executor identity.
browser-evidence = [
    "playwright>=1.51,<2",
]

[project.urls]
Homepage = "https://github.com/dotnetpower/fdai"
Documentation = "https://github.com/dotnetpower/fdai/blob/main/docs/roadmap/README.md"

[project.scripts]
fdaictl = "fdai.deployment_cli.cli:main"
fdai-model-endpoint-discovery = "fdai.delivery.azure.llm.endpoint_discovery_cli:main"

[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fdai"]

[tool.hatch.build.targets.sdist]
include = ["src/fdai", "README.md", "LICENSE", "pyproject.toml"]

# ---------------------------------------------------------------------------
# Dev-tool config lives here so it is picked up as soon as the tools are added
# in W1.7; the actual dependencies are still deferred.
# ---------------------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]
# Mock/design assets and design experiments are not part of the shipped
# monorepo; they live outside the lint gate on purpose.
extend-exclude = ["mocks", "examples"]

[tool.ruff.lint]
# Full rule selection is finalized in W1.7. This is a conservative starter set.
select = ["E", "F", "I", "B", "UP", "N", "S"]
ignore = []

[tool.ruff.lint.per-file-ignores]
# Tests intentionally include hardcoded strings like "token" that trip the
# bandit-style S1xx rules; asserts (S101) are the whole point of the suite.
"tests/**" = ["S101", "S105", "S106"]
# Developer helper scripts shell out to `git` / `python3` with hardcoded
# argument lists - the S6xx subprocess warnings assume attacker-controlled
# input, which does not apply here.
"scripts/**" = ["N999", "S603", "S607"]
"tools/**" = ["S603", "S607"]
# Alembic migrations construct DELETE-IN-list queries from hardcoded module
# constants (`_LINK_TYPES`, `_OBJECT_TYPES`); no user input flows into the
# string, so S608 is a false positive in this scope.
"alembic/**" = ["S608"]
# Chat backend embeds a long-form system prompt as a triple-quoted string
# literal. Breaking the prompt across lines would corrupt the payload the
# LLM sees; the E501 rule does not apply to prose inside a prompt.
"src/fdai/delivery/read_api/routes/chat.py" = ["E501"]
# Codegen CLI + object-type loader header comments run slightly over the
# 100-column budget for readability of a single-line docstring / import.
# These are already committed; opening the doorway to reformat every
# docstring would exceed the intent of this cleanup.
"src/fdai/rule_catalog/codegen/**" = ["E501"]
"src/fdai/rule_catalog/schema/object_type.py" = ["E501"]
"tests/delivery/read_api/test_bitemporal.py" = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src/fdai"]

# aiokafka ships no py.typed marker and no stub package. It is only imported
# by `delivery/azure/event_bus.py`; the adapter boundary in composition
# wraps every call, so the untyped surface is narrow.
[[tool.mypy.overrides]]
module = ["aiokafka", "aiokafka.abc"]
ignore_missing_imports = true

# WeasyPrint is isolated to the optional delivery/reporting adapter and ships
# no py.typed marker. The adapter validates its byte-return boundary.
[[tool.mypy.overrides]]
module = ["weasyprint"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests", "src/fdai"]
addopts = ["-ra", "--strict-markers", "--strict-config", "--import-mode=importlib"]
pythonpath = ["."]
markers = [
    "integration: requires a live Postgres (pgvector). Skipped unless FDAI_DATABASE_URL is set.",
]
# Provider Protocols are async by default (I/O-bound: Kafka, Postgres, KV, LLM);
# `asyncio_mode = "auto"` lets `async def test_...` functions run without a
# per-test marker. Sync tests (CPU boundary validation) still run as-is.
asyncio_mode = "auto"
# Silence third-party deprecation notices we've reviewed but can't reasonably
# act on in this branch. Each filter names the exact source class + module so
# a real regression (a warning from OUR code) still surfaces.
filterwarnings = [
    # starlette 1.3.1 asks TestClient users to switch to httpx2. httpx is used
    # extensively across src/fdai/delivery/**; migrating to httpx2 is a
    # separate work item and does not affect correctness.
    "ignore::starlette.exceptions.StarletteDeprecationWarning",
]

# This is the single safety-core coverage target list used by pytest-cov.
# CI, scripts/verify.sh, and make test all delegate to
# scripts/quality/ci/run-python-tests.sh instead of repeating these paths.
[tool.coverage.run]
source = [
    "src/fdai/core/event_ingest",
    "src/fdai/core/trust_router",
    "src/fdai/core/tiers/t0_deterministic",
    "src/fdai/core/tiers/t1_lightweight",
    "src/fdai/core/tiers/t2_reasoning",
    "src/fdai/core/quality_gate",
    "src/fdai/core/risk_gate",
    "src/fdai/core/hil_resume",
    "src/fdai/core/executor",
    "src/fdai/core/audit",
    "src/fdai/core/control_loop",
]
branch = true

[tool.coverage.report]
fail_under = 90
show_missing = true
skip_covered = false

[dependency-groups]
dev = [
    "types-croniter>=6.2.4.20260711",
]
